working fix part 2 complete
